classDiagram
    direction LR

    class User {
        +String id
        +String email
        +String name
        +String passwordHash
        +Role role
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Project {
        +String id
        +String title
        +String slug
        +String summary
        +String imageUrl
        +Status status
        +Json tags
        +String content
        +Json translations
        +DateTime createdAt
        +DateTime updatedAt
    }

    class BlogPost {
        +String id
        +String title
        +String slug
        +String excerpt
        +String content
        +String coverImage
        +String author
        +Json tags
        +BlogStatus status
        +DateTime publishedAt
        +Json translations
        +DateTime createdAt
        +DateTime updatedAt
    }

    class JobPosting {
        +String id
        +String title
        +String slug
        +String department
        +String location
        +JobType type
        +String description
        +String requirements
        +Boolean isActive
        +Json translations
        +DateTime createdAt
        +DateTime updatedAt
    }

    class JobApplication {
        +String id
        +String name
        +String email
        +String phone
        +String resumeUrl
        +String coverLetter
        +String jobId
        +DateTime createdAt
    }

    class ContactMessage {
        +String id
        +String name
        +String email
        +String subject
        +String message
        +Boolean read
        +DateTime createdAt
    }

    class Media {
        +String id
        +String url
        +String name
        +String mime
        +Int size
        +Int width
        +Int height
        +DateTime createdAt
    }

    class Upload {
        +Int id
        +String filename
        +String url
        +DateTime createdAt
    }

    class Setting {
        +String id
        +String key
        +String value
        +DateTime updatedAt
    }

    class Subdomain {
        +String id
        +String name
        +String title
        +String description
        +String logoUrl
        +String themeColor
        +Boolean isActive
        +Json settings
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Partner {
        +String id
        +String name
        +String logoUrl
        +String website
        +Int order
        +Boolean isActive
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Testimonial {
        +String id
        +String author
        +String role
        +String company
        +String content
        +String avatarUrl
        +Int rating
        +Boolean isActive
        +Int order
        +Json translations
        +DateTime createdAt
        +DateTime updatedAt
    }

    class FaqItem {
        +String id
        +String question
        +String answer
        +String category
        +Int order
        +Boolean isActive
        +Json translations
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Subscriber {
        +String id
        +String email
        +Boolean isActive
        +DateTime createdAt
    }

    class Announcement {
        +String id
        +String message
        +String linkUrl
        +String linkText
        +String bgColor
        +Boolean isActive
        +DateTime startsAt
        +DateTime endsAt
        +Json translations
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Role {
        <<enumeration>>
        ADMIN
        EDITOR
        VIEWER
    }

    class Status {
        <<enumeration>>
        LIVE
        UAT
        DRAFT
    }

    class BlogStatus {
        <<enumeration>>
        DRAFT
        PUBLISHED
    }

    class JobType {
        <<enumeration>>
        FULL_TIME
        PART_TIME
        INTERNSHIP
        CONTRACT
        REMOTE
    }

    User --> Role
    Project --> Status
    BlogPost --> BlogStatus
    JobPosting --> JobType
    JobPosting "1" --> "0..*" JobApplication : receives
